--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc --watch",
-    "server": "nodemon src/index.ts"
+    "build": "tsc",
+    "server": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
